Bug 329877 Coverity complains that js_ErrorToException dereferences reportp before null checking r=brendan